--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       MYSQL_USER: ${DB_USER:-financemate}
       MYSQL_PASSWORD: ${DB_PASSWORD:-financemate}
     ports:
-      - "${DB_PORT:-3306}:3306"
+      - "127.0.0.1:${DB_PORT:-3306}:3306"
     volumes:
       - mariadb_data:/var/lib/mysql
       - ./backend/scripts/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
